--- a/01-typescript-intro/tsconfig.json
+++ b/01-typescript-intro/tsconfig.json
@@ -17,9 +17,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
+    "erasableSyntaxOnly": false,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "experimentalDecorators": true
   },
   "include": ["src"]
 }
